k8s-config/ingress/ingress-usuarios.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuarios-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "usuarios-ingress-ip"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /usuarios
            pathType: Prefix
            backend:
              service:
                name: msvc-usuarios-service
                port:
                  number: 80
